--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ exclude: [vendor]
 
 Archive: /archive
 
-links:
+special_links:
   Instagram: https://www.instagram.com/adidiborg/
   Twitter: https://twitter.com/adidiborg
   Linkedin: https://www.linkedin.com/in/adidiborg/
