--- a/_config.yml
+++ b/_config.yml
@@ -61,3 +61,4 @@ special_links:
   Instagram: https://www.instagram.com/adidiborg/
   Twitter: https://twitter.com/adidiborg
   Linkedin: https://www.linkedin.com/in/adidiborg/
+  Steam: https://steamcommunity.com/id/adidiborg
